<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<com.google.android.material.appbar.MaterialToolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize">

		<Button
			android:id="@+id/button_done"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginHorizontal="@dimen/toolbar_button_margin"
			android:text="@string/save" />

	</com.google.android.material.appbar.MaterialToolbar>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:clipToPadding="false">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="16dp">

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edit_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/name"
					android:inputType="textCapSentences"
					android:maxLength="120" />

			</com.google.android.material.textfield.TextInputLayout>

			<Button
				android:id="@+id/button_sources"
				style="?attr/materialButtonOutlinedStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/smart_folder_sources" />

			<Button
				android:id="@+id/button_categories"
				style="?attr/materialButtonOutlinedStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:text="@string/smart_folder_categories" />

			<Button
				android:id="@+id/button_tags"
				style="?attr/materialButtonOutlinedStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:text="@string/smart_folder_tags" />

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				app:endIconMode="dropdown_menu">

				<AutoCompleteTextView
					android:id="@+id/edit_content"
					style="?editTextStyle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/smart_folder_content"
					android:inputType="none" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				app:endIconMode="dropdown_menu">

				<AutoCompleteTextView
					android:id="@+id/edit_device"
					style="?editTextStyle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/smart_folder_device"
					android:inputType="none" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				app:endIconMode="dropdown_menu">

				<AutoCompleteTextView
					android:id="@+id/edit_sort"
					style="?editTextStyle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/sort_order"
					android:inputType="none" />

			</com.google.android.material.textfield.TextInputLayout>

			<TextView
				android:id="@+id/text_view_error"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:textColor="?colorError"
				android:visibility="gone"
				tools:visibility="visible" />

		</LinearLayout>

	</ScrollView>

</LinearLayout>
