<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/list_selector"
	android:minHeight="72dp"
	android:paddingStart="?android:listPreferredItemPaddingStart"
	tools:ignore="RtlSymmetry">

	<ImageView
		android:id="@+id/imageView_icon"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:contentDescription="@null"
		android:padding="8dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_folder_file" />

	<TextView
		android:id="@+id/textView_title"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:ellipsize="end"
		android:maxLines="1"
		android:textAppearance="?attr/textAppearanceBodyLarge"
		app:layout_constraintBottom_toTopOf="@id/textView_subtitle"
		app:layout_constraintEnd_toStartOf="@id/imageView_edit"
		app:layout_constraintStart_toEndOf="@id/imageView_icon"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_chainStyle="packed"
		tools:text="Reading from MangaDex" />

	<TextView
		android:id="@+id/textView_subtitle"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="4dp"
		android:ellipsize="end"
		android:maxLines="1"
		android:textAppearance="?attr/textAppearanceBodySmall"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@id/imageView_edit"
		app:layout_constraintStart_toEndOf="@id/imageView_icon"
		app:layout_constraintTop_toBottomOf="@id/textView_title"
		tools:text="2 sources · SFW" />

	<ImageButton
		android:id="@+id/imageView_edit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="?selectableItemBackgroundBorderless"
		android:contentDescription="@string/edit"
		android:padding="16dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@id/imageView_delete"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_edit" />

	<ImageButton
		android:id="@+id/imageView_delete"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="?selectableItemBackgroundBorderless"
		android:contentDescription="@string/delete"
		android:padding="16dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@id/imageView_handle"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_delete" />

	<ImageView
		android:id="@+id/imageView_handle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="?selectableItemBackgroundBorderless"
		android:contentDescription="@string/reorder"
		android:padding="16dp"
		android:pointerIcon="grab"
		tools:targetApi="n"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_reorder_handle" />

</androidx.constraintlayout.widget.ConstraintLayout>
